Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12695

Compile error in qmljsinterpreter.cpp with Qt 4.8.6

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 3.2.0-rc1
    • Qt Creator 3.2.0-rc1
    • Quick / QML Support
    • None
    • Ubuntu 14.04 LTS 64 bit
    • 4f5747e3484e887b1e99abe1d936cdf09ef5d088

      /home/qtrob/dev/src/creator-3.2/src/libs/qmljs/qmljsinterpreter.cpp: In function 'uint QmlJS::qHash(const QmlJS::FakeMetaObjectWithOrigin&, int)':
      /home/qtrob/dev/src/creator-3.2/src/libs/qmljs/qmljsinterpreter.cpp:186:43: error: no matching function for call to 'qHash(const ConstPtr&, int&)'
           return qHash(fmoo.fakeMetaObject, seed);
                                                 ^
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fawzi Fawzi Mohamed
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes