Compile fix for Qt 4.8.6

Task-number: QTCREATORBUG-12695
Done-by: Fawzi Mohamed <fawzi.mohamed@digia.com>
Change-Id: Id184bb051c08ee954474cca89308712e14710f23
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@digia.com>